Used instance variables in templates
Puppet 3.0 demands that templates reference Puppet values as instance variables
and complains loudly about deprecation and whatnot when they don't.

--- a/templates/update.erb
+++ b/templates/update.erb
@@ -1,13 +1,13 @@
-Name: <%= name %>
-Method: <%= url %>
+Name: <%= @name %>
+Method: <%= @url %>
 <% if @suite -%>
-Suite: <%= suite %>
+Suite: <%= @suite %>
 <% end -%>
 <% if @architectures -%>
-Architectures: <%= architectures %>
+Architectures: <%= @architectures %>
 <% end -%>
-VerifyRelease: <%= verify_release %>
-<% if filter_list != "" -%>
-FilterList: <%= filter_list %>
+VerifyRelease: <%= @verify_release %>
+<% if @filter_list != "" -%>
+FilterList: <%= @filter_list %>
 <% end -%>
 
