--- a/templates/update-distribution.sh.erb
+++ b/templates/update-distribution.sh.erb
@@ -48,12 +48,12 @@ fi
 cd ${BASEDIR}/${REPOSITORY}/tmp/${CODENAME}
 ls *.deb 2>/dev/null
 if [ $? -eq 0 ]; then 
-  $REPREPRO -b ${BASEDIR}/${REPOSITORY} includedeb stable *.deb; 
+  $REPREPRO -b ${BASEDIR}/${REPOSITORY} includedeb $DISTRIBUTION *.deb; 
   rm *.deb; 
 
   if ${SNAPSHOTS}; then
     SNAPDIR="${BASEDIR}/${REPOSITORY}/dists/${DISTRIBUTION}/snapshots"
     SNAPVER=$(if ls -d ${SNAPDIR}/[0-9]* 2> /dev/null; then ls -d ${SNAPDIR}/[0-9]* | xargs -n 1 basename | sort -rn | tail -1 | awk '{printf "%d", $1 + 1; exit}';else echo -n 0; fi)
-    $REPREPRO -b ${BASEDIR}/${REPOSITORY} gensnapshot stable $SNAPVER
+    $REPREPRO -b ${BASEDIR}/${REPOSITORY} gensnapshot $DISTRIBUTION $SNAPVER
   fi
 fi
