Syntax issue when @uploaders is defined
The end of line is removed by the ERB <% -%> and makes it unparseable

--- a/templates/distribution.erb
+++ b/templates/distribution.erb
@@ -12,7 +12,7 @@ DebIndices: <%= @deb_indices %>
 DscIndices: <%= @dsc_indices %>
 SignWith: <%= @sign_with %>
 <% if @uploaders != "" -%>
-Uploaders: <%= @uploaders -%>
+Uploaders: <%= @uploaders %>
 <% end -%>
 <% if @update != "" -%>
 Update: <%= @update %>
