Force delete of files after an update
If the files do not belong to the reprepro user, e.g. they belong
to 'root', the rm command asks if you really want to remove this
file. This commit adds the option "-f" to the rm command which
prevents this question.

--- a/templates/update-distribution.sh.erb
+++ b/templates/update-distribution.sh.erb
@@ -49,7 +49,7 @@ cd ${BASEDIR}/${REPOSITORY}/tmp/${CODENAME}
 ls *.deb 2>/dev/null
 if [ $? -eq 0 ]; then 
   $REPREPRO -b ${BASEDIR}/${REPOSITORY} includedeb $DISTRIBUTION *.deb; 
-  rm *.deb; 
+  rm -f *.deb; 
 
   if ${SNAPSHOTS}; then
     SNAPDIR="${BASEDIR}/${REPOSITORY}/dists/${DISTRIBUTION}/snapshots"
