Make repository signature optional
If you don't give a GPG key, then the repository will not be signed.

--- a/templates/distribution.erb
+++ b/templates/distribution.erb
@@ -10,7 +10,9 @@ UDebComponents: <%= @udebcomponents %>
 Description: <%= @description %>
 DebIndices: <%= @deb_indices %>
 DscIndices: <%= @dsc_indices %>
+<% if @sign_with != "" -%>
 SignWith: <%= @sign_with %>
+<% end -%>
 <% if @uploaders != "" -%>
 Uploaders: <%= @uploaders %>
 <% end -%>
