--- a/templates/update-distribution.sh.erb
+++ b/templates/update-distribution.sh.erb
@@ -53,7 +53,7 @@ if [ $? -eq 0 ]; then
 
   if ${SNAPSHOTS}; then
     SNAPDIR="${BASEDIR}/${REPOSITORY}/dists/${DISTRIBUTION}/snapshots"
-    SNAPVER=$(if ls -d ${SNAPDIR}/[0-9]* &> /dev/null; then ls -d ${SNAPDIR}/[0-9]* | xargs -n 1 basename | sort -rn | tail -1 | awk '{printf "%d", $1 + 1; exit}';else echo -n 0; fi)
+    SNAPVER=$(if ls -d ${SNAPDIR}/[0-9]* &> /dev/null; then ls -d ${SNAPDIR}/[0-9]* | xargs -n 1 basename | sort -n | tail -1 | awk '{printf "%d", $1 + 1; exit}';else echo -n 0; fi)
     $REPREPRO -b ${BASEDIR}/${REPOSITORY} gensnapshot $DISTRIBUTION $SNAPVER
   fi
 fi
