reprepro::pull type to pull from a distribution
This allows to pull packages from one distribution of the repository
into another distribution. In contrast to a reprepro::update
configuration this is faster but limited to distributions in the same
repository.

--- a/templates/distribution.erb
+++ b/templates/distribution.erb
@@ -22,6 +22,9 @@ Uploaders: <%= @uploaders %>
 <% if @update != "" -%>
 Update: <%= @update %>
 <% end -%>
+<% if @pull != "" -%>
+Pull: <%= @pull %>
+<% end -%>
 <% if @not_automatic != "" -%>
 NotAutomatic: <%= @not_automatic %>
 <% end -%>
