Add download_list_as parameter for reprepro::update
This is needed as a workaround for Debian Bug #639540.
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=639540

--- a/templates/update.erb
+++ b/templates/update.erb
@@ -17,3 +17,6 @@ FilterList: <%= @filter_list %>
 <% if @filter_src_list != "" -%>
 FilterSrcList: <%= @filter_src_list %>
 <% end -%>
+<% if @download_lists_as != "" -%>
+DownloadListsAs: <%= @download_lists_as %>
+<% end -%>
