Add ignore_release to reprepro::update

--- a/templates/update.erb
+++ b/templates/update.erb
@@ -3,6 +3,7 @@ Method: <%= @url %>
 <% if @suite -%>
 Suite: <%= @suite %>
 <% end -%>
+IgnoreRelease: <%= @ignore_release %>
 <% if @architectures -%>
 Architectures: <%= @architectures %>
 <% end -%>
