Add filter_src_name parameter to reprepro::update
This works identically to the existing filter_name parameter but matches
on source package names. It creates a FilterSrcList entry in
conf/upates.

--- a/templates/update.erb
+++ b/templates/update.erb
@@ -14,4 +14,6 @@ VerifyRelease: <%= @verify_release %>
 <% if @filter_list != "" -%>
 FilterList: <%= @filter_list %>
 <% end -%>
-
+<% if @filter_src_list != "" -%>
+FilterSrcList: <%= @filter_src_list %>
+<% end -%>
