Add but_automatic_upgrades to reprepro::distribution

--- a/templates/distribution.erb
+++ b/templates/distribution.erb
@@ -28,4 +28,7 @@ Pull: <%= @pull %>
 <% if @not_automatic != "" -%>
 NotAutomatic: <%= @not_automatic %>
 <% end -%>
+<% if @but_automatic_upgrades != "" -%>
+ButAutomaticUpgrades: <%= @but_automatic_upgrades %>
+<% end -%>
 
