--- a/templates/update-distribution.sh.erb
+++ b/templates/update-distribution.sh.erb
@@ -50,6 +50,7 @@ ls *.deb 2>/dev/null
 if [ $? -eq 0 ]; then 
   $REPREPRO -b ${BASEDIR}/${REPOSITORY} includedeb $CODENAME *.deb
   if [ $? -eq 0 ]; then rm -f *.deb; fi
+  $REPREPRO -b ${BASEDIR}/${REPOSITORY} export $CODENAME;
 
   if ${SNAPSHOTS}; then
     SNAPDIR="${BASEDIR}/${REPOSITORY}/dists/${DISTRIBUTION}/snapshots"
