--- a/templates/update.erb
+++ b/templates/update.erb
@@ -10,6 +10,9 @@ Architectures: <%= @architectures %>
 <% if @components -%>
 Components: <%= @components %>
 <% end -%>
+<% if @udebcomponents -%>
+UdebComponents: <%= @udebcomponents %>
+<% end -%>
 VerifyRelease: <%= @verify_release %>
 <% if @filter_list != "" -%>
 FilterList: <%= @filter_list %>
