allow to define 'Flat' attribute in update configurations

--- a/templates/update.erb
+++ b/templates/update.erb
@@ -13,6 +13,9 @@ Components: <%= @components %>
 <% if @udebcomponents -%>
 UdebComponents: <%= @udebcomponents %>
 <% end -%>
+<% if @flat -%>
+Flat: <%= @flat %>
+<% end -%>
 VerifyRelease: <%= @verify_release %>
 <% if @filter_list != "" -%>
 FilterList: <%= @filter_list %>
