make 'origin', 'label', 'suite' and 'description' optional

--- a/templates/distribution.erb
+++ b/templates/distribution.erb
@@ -1,6 +1,12 @@
+<% if @origin -%>
 Origin: <%= @origin %>
+<% end -%>
+<% if @label -%>
 Label: <%= @label %>
+<% end -%>
+<% if @suite -%>
 Suite: <%= @suite %>
+<% end -%>
 Codename: <%= @codename %>
 Architectures: <%= @architectures %>
 Components: <%= @components %>
@@ -10,7 +16,9 @@ FakeComponentPrefix: <%= @fakecomponentprefix %>
 <% if @udebcomponents != "" -%>
 UDebComponents: <%= @udebcomponents %>
 <% end -%>
+<% if @description -%>
 Description: <%= @description %>
+<% end -%>
 DebIndices: <%= @deb_indices %>
 DscIndices: <%= @dsc_indices %>
 <% if @sign_with != "" -%>
