--- a/templates/update-distribution.sh.erb
+++ b/templates/update-distribution.sh.erb
@@ -3,15 +3,12 @@ SNAPSHOTS=false
 BASEDIR="<%= @basedir %>"
 REPREPRO="/usr/bin/reprepro"
 
-usage () { echo "Usage: $0 -r <repository> -d <distribution> -c <codename> [-s]"; }
+usage () { echo "Usage: $0 -r <repository> -c <codename> [-s]"; }
 
 while getopts ":r:d:c:sh" opt; do
   case $opt in
     r)
       REPOSITORY=$OPTARG
-      ;;
-    d)
-      DISTRIBUTION=$OPTARG
       ;;
     c)
       CODENAME=$OPTARG
@@ -40,7 +37,7 @@ done
 
 shift $(($OPTIND - 1))
 
-if [ -z "$REPOSITORY" -o -z "$DISTRIBUTION" -o -z "$CODENAME" ]; then
+if [ -z "$REPOSITORY" -o -z "$CODENAME" ]; then
   usage
   exit 1
 fi
@@ -53,8 +50,8 @@ if [ $? -eq 0 ]; then
   $REPREPRO -b ${BASEDIR}/${REPOSITORY} export $CODENAME;
 
   if ${SNAPSHOTS}; then
-    SNAPDIR="${BASEDIR}/${REPOSITORY}/dists/${DISTRIBUTION}/snapshots"
+    SNAPDIR="${BASEDIR}/${REPOSITORY}/dists/${CODENAME}/snapshots"
     SNAPVER=$(if ls -d ${SNAPDIR}/[0-9]* &> /dev/null; then ls -d ${SNAPDIR}/[0-9]* | xargs -n 1 basename | sort -n | tail -1 | awk '{printf "%d", $1 + 1; exit}';else echo -n 0; fi)
-    $REPREPRO -b ${BASEDIR}/${REPOSITORY} gensnapshot $DISTRIBUTION $SNAPVER
+    $REPREPRO -b ${BASEDIR}/${REPOSITORY} gensnapshot $CODENAME $SNAPVER
   fi
 fi
