Add Log to distributions

--- a/templates/distribution.erb
+++ b/templates/distribution.erb
@@ -39,4 +39,7 @@ NotAutomatic: <%= @not_automatic %>
 <% if @but_automatic_upgrades != "" -%>
 ButAutomaticUpgrades: <%= @but_automatic_upgrades %>
 <% end -%>
+<% if @log != "" -%>
+Log: <%= @log %>
+<% end -%>
 
