add parameter getinrelease for update
IF this is present, no InRelease file is downloaded
during update of distribution.

--- a/templates/update.erb
+++ b/templates/update.erb
@@ -4,6 +4,9 @@ Method: <%= @url %>
 Suite: <%= @suite %>
 <% end -%>
 IgnoreRelease: <%= @ignore_release %>
+<% if @getinrelease -%>
+GetInRelease: <%= @getinrelease %>
+<% end -%>
 <% if @architectures -%>
 Architectures: <%= @architectures %>
 <% end -%>
